...
                                <rect key="frame" x="332" y="693" width="62" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <state key="normal" title="Choose"/>
                                <connections>
                                    <segue destination="LdG-83-D8H" kind="popoverPresentation" popoverAnchorView="uPb-JG-Sa3" id="wBG-Np-bLZ">
...
                                <rect key="frame" x="185.5" y="794" width="43" height="36"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Save"/>
                                <connections>
                                    <action selector="saveButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="b0i-16-29R"/>
...
                                <rect key="frame" x="135" y="424" width="144" height="48"/>
                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                <state key="normal" title="Order talon"/>
                                <connections>
                                    <action selector="orderTalon:" destination="CtE-zS-9Lq" eventType="touchUpInside" id="xOK-eY-kW2"/>
...
                                <rect key="frame" x="136.5" y="168" width="141" height="32"/>
                                <segments>
                                    <segment title="Log in"/>
                                    <segment title="Register"/>
                                </segments>
                                <connections>
...
                                        </connections>
                                    </button>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Login" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mnP-0V-aq4">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
                                        <color key="textColor" systemColor="systemGray2Color"/>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E-mail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cSP-9W-l5s">
                                        <rect key="frame" x="0.0" y="42" width="374" height="34"/>
                                        <color key="textColor" systemColor="systemGray2Color"/>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ryO-JF-zs6">
                                        <rect key="frame" x="0.0" y="85" width="374" height="34"/>
                                        <color key="textColor" systemColor="systemGray2Color"/>
...
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Repeat password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nsk-Lg-H8r">
                                        <rect key="frame" x="0.0" y="127" width="374" height="34"/>
                                        <color key="textColor" systemColor="systemGray2Color"/>
...
                                        <rect key="frame" x="124" y="91" width="132" height="39"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                        <state key="normal" title="Enter account"/>
                                        <connections>
                                            <action selector="enterButton:" destination="wQE-Qu-DkZ" eventType="touchUpInside" id="jHP-7J-oX3"/>
...
