...
                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                        <nil key="textColor"/>
                        <nil key="highlightedColor"/>
                    </label>
                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gDy-wK-23H">
                        <rect key="frame" x="354" y="10" width="45" height="30"/>
                        <state key="normal" title="Delete"/>
                        <connections>
                            <action selector="deleteTalon:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="nzw-of-F4n"/>
                        </connections>
                    </button>
                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EOh-ua-t8A">
                        <rect key="frame" x="67" y="72" width="42" height="21"/>
...
