...
                        <nil key="textColor"/>
                        <nil key="highlightedColor"/>
                    </label>
                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xkz-Ik-KBm">
                        <rect key="frame" x="425" y="10" width="55" height="36"/>
                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                        <state key="normal" title="Order"/>
                        <connections>
                            <action selector="orderTalon:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="GQx-jc-SKc"/>
                        </connections>
                    </button>
                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f3r-sA-DwQ">
                        <rect key="frame" x="438" y="140" width="42" height="21"/>
...
